--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 django="5.0.1"
 django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
+psycopg = "^3.2.3"
+dj-database-url = "^2.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
