--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django="5.0.1"
 django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
 psycopg = "^3.2.3"
 dj-database-url = "^2.3.0"
+django-widget-tweaks = "^1.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
